add sortable table js file

--- a/src/comp62521/templates/base.html
+++ b/src/comp62521/templates/base.html
@@ -4,7 +4,7 @@
   <head>
     <title>{% block title %}{% endblock %}</title>
   </head>
-
+  <script src="https://kryogenix.org/code/browser/sorttable/sorttable.js"></script>
   <body>
     <div id="page">
       <div id="header">
