--- a/src/comp62521/templates/base.html
+++ b/src/comp62521/templates/base.html
@@ -3,6 +3,7 @@
 
   <head>
     <title>{% block title %}{% endblock %}</title>
+    <script src="https://kryogenix.org/code/browser/sorttable/sorttable.js"></script>
   </head>
 
   <body>
