--- a/src/comp62521/templates/statistics_details.html
+++ b/src/comp62521/templates/statistics_details.html
@@ -4,11 +4,11 @@
 
 <h1>{{ args.title }}</h1>
 
-<table class="sortable">
+<table>
   <thead>
     <tr>
     {% for column in args.data[0] %}
-      <th>{{ column }}</th>
+      <th class="{{ column }}">{{ column }}</th>
     {% endfor %}
     </tr>
   </thead>
