--- a/src/comp62521/templates/statistics_details.html
+++ b/src/comp62521/templates/statistics_details.html
@@ -4,11 +4,11 @@
 
 <h1>{{ args.title }}</h1>
 
-<table>
+<table id="example" class="display" >
   <thead>
     <tr>
     {% for column in args.data[0] %}
-      <th class="{{ column }}">{{ column }}</th>
+      <th id= "{{ column }}">{{ column }}</th>
     {% endfor %}
     </tr>
   </thead>
@@ -21,6 +21,6 @@
     {% endfor %}
     </tr>
   {% endfor %}
-  </tbody>ŸŸ
+  </tbody>
 </table>
 {% endblock %}
