--- a/src/comp62521/templates/statistics_details.html
+++ b/src/comp62521/templates/statistics_details.html
@@ -16,11 +16,13 @@
   <tbody>
   {% for row in args.data[1] %}
     <tr>
-    {% for data_item in row %}
+     <td><a href="/author_details?author={{ row[0] }}">{{ row[0] }}</a></td>
+    {% for data_item in row[1:] %}
       <td>{{ data_item }}</td>
     {% endfor %}
     </tr>
   {% endfor %}
   </tbody>
 </table>
+
 {% endblock %}
