--- a/src/comp62521/templates/statistics.html
+++ b/src/comp62521/templates/statistics.html
@@ -14,5 +14,6 @@
   <li><a href="/averages">Averaged Year Data</a></li>
   <li><a href="/coauthors">Co-Authors</a></li>
   <li><a href="/search_name">search</a></li>
+  <li><a href="/search_type">Search Author by Publication Type</a></li>
 </ul>
 {% endblock %}
