add codes for function get_fuzzy_search_name

--- a/src/comp62521/templates/serch_name.html
+++ b/src/comp62521/templates/serch_name.html
@@ -8,8 +8,8 @@
 
 Insert name: <input type="text" name="author" value="">
 
-
 <input type="submit" value="Submit" ><br>
+
 search result = {{args.author}}<br>
 The overall number of publications = {{ args.allpublications }}<br>
 The number of conference papers = {{ args.conference_papers }}<br>
@@ -19,6 +19,7 @@ The number of books = {{ args.books }}<br>
 The number of co-authors = {{ args.co_authors }}<br>
 The number of times (overall) an author appears first on a paper = {{ args.first }}<br>
 The number of times (overall) an author appears last on a paper = {{ args.last }}<br>
+The number of times (overall) an author appears last on a paper = {{ args.sole }}<br>
 </form>
 
 
