--- a/src/comp62521/templates/statistics.html
+++ b/src/comp62521/templates/statistics.html
@@ -13,6 +13,7 @@
   <li><a href="/statisticsdetails/author_year">Author by Year</a></li>
   <li><a href="/averages">Averaged Year Data</a></li>
   <li><a href="/coauthors">Co-Authors</a></li>
-  <li><a href="/search_name">search</a></li>
+  <li><a href="/search_name">Search by Author</a></li>
+  <li><a href="/fuzzy_search_name">Fuzzy Search Author</a></li>
 </ul>
 {% endblock %}
