--- a/src/comp62521/templates/statistics.html
+++ b/src/comp62521/templates/statistics.html
@@ -16,7 +16,8 @@
   <li><a href="/search_name">Search</a></li>
   <li><a href="/search_type">Search Author by Publication Type</a></li>
   <li><a href="/author_details">Author Details</a></li>
-  <li><a href="/fuzzy_search_name">Fuzzy Search Author</a></li>
+  <li><a href="/fuzzy_search_name">Fuzzy Search Author</a></li> 
+  <li><a href="/separation">Author Separation</a></li>
 </ul>
 {% endblock %}
 
