33: Auto stash before merge of "33" and "origin/master"

--- a/src/comp62521/templates/author_details.html
+++ b/src/comp62521/templates/author_details.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 {% block title %}{{ args.title }}{% endblock %}
+{% block breadcrumb %}
+    <li class="breadcrumb-item"><a href="/">Home</a></li>
+    <li class="breadcrumb-item active"> {{ args.title }}</li>
+{% endblock %}
 {% block content %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/3.8.5/echarts.min.js"></script>
 <style>
