--- a/src/comp62521/templates/search_name_link.html
+++ b/src/comp62521/templates/search_name_link.html
@@ -1,8 +1,12 @@
 {% extends "base.html" %}
 {% block title %}{{ args.title }}{% endblock %}
+{% block breadcrumb %}
+    <li class="breadcrumb-item"><a href="/">Home</a></li>
+    <li class="breadcrumb-item active"> {{ args.title }}</li>
+{% endblock %}
 {% block content %}
 <h1>{{ args.title }}</h1>
-<table class="sortable">
+<table id="example" class="table table-striped table-bordered">
 
 {% if  args.authors %}
 <thead>
