--- a/src/comp62521/templates/statistics_details.html
+++ b/src/comp62521/templates/statistics_details.html
@@ -1,10 +1,14 @@
 {% extends "base.html" %}
 {% block title %}{{ args.title }}{% endblock %}
+{% block breadcrumb %}
+    <li class="breadcrumb-item"><a href="/">Home</a></li>
+    <li class="breadcrumb-item active"> {{ args.title }}</li>
+{% endblock %}
 {% block content %}
 
 <h1>{{ args.title }}</h1>
 
-<table id="example" class="display" >
+<table id="example" ŸŸŸ >
   <thead>
     <tr>
     {% for column in args.data[0] %}
